# careerLens

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/models/: chunk.py  resume.py  schemas.py
app/routers/: analyze.py  health.py  resume.py
app/services/: embedding.py  llm.py
app/utils/: text.py
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py
backend/app/models/: chunk.py  resume.py  schemas.py
backend/app/routers/: analyze.py  resume.py
backend/app/services/: embedding.py  llm.py  retrieval.py
backend/app/utils/: text.py
backend/migrations/: 0001_add_user_id_to_resumes.sql  0002_rls_resumes_chunks.sql
backend/tests/: test_auth.py
docs/: 01-auth-setup.md  02-auth-implementation-plan.md
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/actions/: analyze.ts  auth.ts  resume.ts
frontend/app/components/: AnalysisResultView.tsx  AnalyzeForm.tsx  Header.tsx  ResumeForm.tsx  ResumeWorkspace.tsx  ScoreRing.tsx  StatusBanner.tsx  SubmitButton.tsx
frontend/app/lib/: api.ts  resumes.ts  types.ts
frontend/app/lib/supabase/: client.ts  middleware.ts  server.ts
frontend/app/login/: LoginForm.tsx  page.tsx
frontend/app/signup/: SignupForm.tsx  page.tsx
frontend/app/utils/: action.ts
tests/: test_services.py
